Fixed grid sizing and alignment at widest breakpoint

--- a/app/assets/code-club/stylesheets/generic/_grid.scss
+++ b/app/assets/code-club/stylesheets/generic/_grid.scss
@@ -35,7 +35,9 @@
 /* tablet-portait */
 @media (min-width: $break-narrow) {
   .c-col {
-    margin: 2%;
+    flex-grow:   0;
+    flex-shrink: 1;
+    margin:      2%;
   }
 
     .c-col--1 {
