--- a/public/assets/code-club/stylesheets/code-club.css
+++ b/public/assets/code-club/stylesheets/code-club.css
@@ -1,10 +1,3 @@
-/**
- * code-club.css
- * 
- * Code Club Style Guide - A collection of UI components for styling Code Club websites
- * @version v1.0.9
- * @link https://styleguide.codeclubworld.org/
- */
 /*
   These styles try to follow the ITCSS philosophy for organising styles, by csswizrdry.com
   http://www.creativebloq.com/web-design/manage-large-scale-web-projects-new-css-architecture-itcss-41514731?page=1
@@ -623,6 +616,13 @@ th {
 /* tablet-portait */
 @media (min-width: 37.5rem) {
   .c-col {
+    -webkit-box-flex: 0;
+    -webkit-flex-grow: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -webkit-flex-shrink: 1;
+        -ms-flex-negative: 1;
+            flex-shrink: 1;
     margin: 2%; }
   .c-col--1 {
     -webkit-flex-basis: 21%;
